--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/tejasmanohar/guestbook
-  tag: latest
+  repository: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend
+  tag: v5
   pullPolicy: IfNotPresent
 
 containerPort: 80
