--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend
-  tag: v5
+  repository: gcr.io/google_containers/guestbook
+  tag: v3
   pullPolicy: IfNotPresent
 
 containerPort: 80
