Change ingress host from guestbook.local to nginx.local

--- a/kustomize-guestbook/ingress.yaml
+++ b/kustomize-guestbook/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: public
   rules:
-  - host: guestbook.local
+  - host: nginx.local
     http:
       paths:
       - backend:
